<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/hint"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/validate"
        android:layout_gravity="end"/>

    <TextView
        android:id="@+id/inputValidationSuccess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/good_choice"
        android:textColor="@color/design_default_color_secondary"
        android:textSize="34sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/inputValidationError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bad_choice"
        android:textColor="@color/design_default_color_error"
        android:textSize="34sp"
        android:visibility="gone" />

</LinearLayout>